--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,6 +6,12 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "baseUrl": "src",
+    "paths": {
+      "@/components/*": ["components/*"],
+      "@/views/*": ["views/*"],
+      "@/layout/*": ["layout/*"],
+    },
 
     /* Bundler mode */
     "moduleResolution": "bundler",
