--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -14,6 +14,7 @@
       "@/services/*": ["services/*"],
       "@/types/*": ["types/*"],
       "@/lib/*": ["lib/*"],
+      "@/hooks/*": ["hooks/*"],
     },
 
     /* Bundler mode */
